# Simple-Hypr-Bar

./: .gitignore  app.ts  gen_ensure_type.awk  meson.build  style.scss
common/lib/: utils.ts
common/style/: colors.scss  utils.scss
common/widget/: PopupWindow.tsx
src/: app.vala  gresource.xml  main.scss  meson.build
src/widgets/Bar/: Bar.vala  Clock.vala  FocusedClient.vala  Tray.vala  Workspaces.vala
src/widgets/Bar/scss/: Bar.scss
src/widgets/Bar/ui/: Bar.blp  Clock.blp  FocusedClient.blp  Tray.blp  Workspaces.blp
widget/: Bar.tsx
widget/AppLauncher/: Toggle.tsx  Toogle.tsx  index.tsx
widget/Bar/: FocusedClient.tsx  SysTray.tsx  Time.tsx  Workspaces.tsx  index.tsx  style.scss
widget/QuickSettings/: Audio.tsx  Battery.tsx  Toggle.tsx  Wifi.tsx  index.tsx  style.scss
